modificando a pokedex seguindo o desafio

--- a/index.html
+++ b/index.html
@@ -23,12 +23,21 @@
 </head>
 
 <body>
+
     <section class="content">
-        <h1>Pokedex</h1>
+
+        <div class="logo">
+            <h1><img src="assets/css/imagem-pokedex.png" alt=""></h1>
+        </div>
+
+
+        <div id="pokemon" class="pokemon"> </div>
+        <div id="abilitiy" class=""> </div>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
+
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
